RESOLVED FIXED193279
ComplexText: Test fast/text/word-space-nbsp.html fails when using complex text path
https://bugs.webkit.org/show_bug.cgi?id=193279
Summary ComplexText: Test fast/text/word-space-nbsp.html fails when using complex tex...
Carlos Garcia Campos
Reported 2019-01-09 05:26:15 PST
The fix applied in r135884 to WidthIterator should also be applied to ComplexTextController.
Attachments
Patch (1.71 KB, patch)
2019-01-09 05:28 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2019-01-09 05:28:21 PST
Myles C. Maxfield
Comment 2 2019-01-11 15:17:37 PST
Comment on attachment 358697 [details] Patch Where's the test?
Michael Catanzaro
Comment 3 2019-01-11 17:23:50 PST
Comment on attachment 358697 [details] Patch fast/text/word-space-nbsp.html? :)
Myles C. Maxfield
Comment 4 2019-01-11 17:42:54 PST
(In reply to Michael Catanzaro from comment #3) > Comment on attachment 358697 [details] > Patch > > fast/text/word-space-nbsp.html? :) Oh, it's not marked as failing yet?
Carlos Garcia Campos
Comment 5 2019-01-13 01:34:28 PST
(In reply to Myles C. Maxfield from comment #4) > (In reply to Michael Catanzaro from comment #3) > > Comment on attachment 358697 [details] > > Patch > > > > fast/text/word-space-nbsp.html? :) > > Oh, it's not marked as failing yet? It started to fail when we switched to use complex text code path for layout tests, but we never marked it as failure: https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r239904%20(9360)/fast/text/word-space-nbsp-diffs.html
Michael Catanzaro
Comment 6 2019-01-21 12:35:55 PST
Um... it's marked as failing now! (After bug #193628.) Myles?
Michael Catanzaro
Comment 7 2019-01-21 12:36:27 PST
(Patch should remove the failure expectation when landing, but no reason to block review on that.)
Carlos Garcia Campos
Comment 8 2019-01-30 06:09:31 PST
Ping Myles.
Michael Catanzaro
Comment 9 2019-01-30 07:14:37 PST
(In reply to Michael Catanzaro from comment #7) > (Patch should remove the failure expectation when landing, but no reason to > block review on that.)
Carlos Garcia Campos
Comment 10 2019-02-01 06:33:22 PST
Radar WebKit Bug Importer
Comment 11 2019-02-01 06:34:27 PST
Myles C. Maxfield
Comment 12 2019-02-01 16:34:36 PST
Sorry for not getting to this in time.
Note You need to log in before you can comment on or make changes to this bug.