ComplexText: Test fast/text/word-space-nbsp.html fails when using complex text path https://bugs.webkit.org/show_bug.cgi?id=193279

Reviewed by Michael Catanzaro.

Source/WebCore:

The fix applied in r135884 to WidthIterator should also be applied to ComplexTextController.

* platform/graphics/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):

LayoutTests:

Remove test expectation.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/208619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240846 268f45cc-cd09-0410-ab3c-d52691b4dbfc